--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "swr": "^1.3.0",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
