--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
     "swr": "^1.3.0",
     "typescript": "^4.8.4"
